fixed last change to .eleventy.JavaScript

--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -1,6 +1,9 @@
 "/",
+"/android-chrome-192x192.png",
+"/android-chrome-512x512.png",
 "/animals/",
 "/animals/13linegs/",
+"/animals/animals.json",
 "/animals/badger/",
 "/animals/barnacle/",
 "/animals/beaver/",
@@ -59,10 +62,12 @@
 "/animals/wolver/",
 "/animals/yelbelmar/",
 "/animals/yelpchip/",
+"/apple-touch-icon.png",
 "/birds/",
 "/birds/annas/",
 "/birds/baldeagle/",
 "/birds/belted/",
+"/birds/birds.json",
 "/birds/blchickadee/",
 "/birds/blturnstone/",
 "/birds/blugrouse/",
@@ -143,6 +148,11 @@
 "/birds/woodduck/",
 "/birds/yellrump/",
 "/birds/yellwarb/",
+"/browserconfig.xml",
+"/favicon-16x16.png",
+"/favicon-32x32.png",
+"/favicon.ico",
+"/firebase.json",
 "/help/",
 "/herps/",
 "/herps/borchor/",
@@ -150,6 +160,7 @@
 "/herps/cantoad/",
 "/herps/colsfrog/",
 "/herps/gartsnake/",
+"/herps/herps.json",
 "/herps/hognsnake/",
 "/herps/ltsalam/",
 "/herps/naracer/",
@@ -207,6 +218,7 @@
 "/insects/horsefly/",
 "/insects/housefly/",
 "/insects/houspid/",
+"/insects/insects.json",
 "/insects/katydid/",
 "/insects/ladybug/",
 "/insects/leafcbee/",
@@ -227,6 +239,8 @@
 "/insects/watstrid/",
 "/insects/wolfspid/",
 "/manifest.json",
+"/mstile-150x150.png",
+"/nature.css",
 "/photos/animals/large/13linegs.jpg",
 "/photos/animals/large/badger.jpg",
 "/photos/animals/large/barnacle.jpg",
@@ -867,6 +881,7 @@
 "/plants/norbvio/",
 "/plants/philflea/",
 "/plants/pincac/",
+"/plants/plants.json",
 "/plants/pracone/",
 "/plants/pracrocus/",
 "/plants/praonion/",
@@ -930,6 +945,7 @@
 "/trees/spruce/",
 "/trees/tam/",
 "/trees/thimble/",
+"/trees/trees.json",
 "/trees/tremasp/",
 "/trees/twibhon/",
 "/trees/twinhon/",
