change heading font to Kalam

--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -152,7 +152,10 @@
 "/favicon-16x16.png",
 "/favicon-32x32.png",
 "/favicon.ico",
-"/firebase.json",
+"/fonts/kalam-v10-latin-700.woff",
+"/fonts/kalam-v10-latin-700.woff2",
+"/fonts/kalam-v10-latin-regular.woff",
+"/fonts/kalam-v10-latin-regular.woff2",
 "/help/",
 "/herps/",
 "/herps/borchor/",
