put back X close button
needed for "back" when standalone

--- a/_includes/help.html
+++ b/_includes/help.html
@@ -12,6 +12,7 @@ year: function () { return (new Date()).getFullYear() }
 
 <body>
     <div class="header">
+        {{> closebutton.html }}
         <h1>
             <div class="header-left">
                 <a href="/">
