--- a/_includes/single.html
+++ b/_includes/single.html
@@ -45,6 +45,7 @@ prev: function() {
 
 <body>
     <div class="header">
+        {{> closebutton.html }}
         {{> helpbutton.html }}
         {{> searchbutton.html }}
         <h1>
