--- a/_includes/type.html
+++ b/_includes/type.html
@@ -7,6 +7,7 @@
 
 <body>
     <div class="header">
+        {{> closebutton.html }}
         {{> helpbutton.html }}
         {{> searchbutton.html }}
         <h1>
