add Lunr search

--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -180,6 +180,7 @@
 "/herps/westskink/",
 "/herps/westtoad/",
 "/herps/woodfrog/",
+"/idx.js",
 "/images/animals.svg",
 "/images/back.svg",
 "/images/background.jpg",
@@ -241,7 +242,9 @@
 "/insects/watboat/",
 "/insects/watstrid/",
 "/insects/wolfspid/",
+"/lunr.js",
 "/manifest.json",
+"/map.js",
 "/mstile-150x150.png",
 "/nature.css",
 "/photos/animals/large/13linegs.jpg",
