--- a/nature.css
+++ b/nature.css
@@ -17,6 +17,7 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 @font-face {
@@ -24,8 +25,8 @@ html, body {
   font-style: normal;
   font-weight: 400;
   src: local('Kalam'), local('Kalam-Regular'),
-       url('/fonts/kalam-v10-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('/fonts/kalam-v10-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+       url('/fonts/kalam-v10-latin-regular.woff2') format('woff2'),
+       url('/fonts/kalam-v10-latin-regular.woff') format('woff');
 }
 
 @font-face {
@@ -33,8 +34,8 @@ html, body {
   font-style: normal;
   font-weight: 700;
   src: local('Kalam Bold'), local('Kalam-Bold'),
-       url('/fonts/kalam-v10-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('/fonts/kalam-v10-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+       url('/fonts/kalam-v10-latin-700.woff2') format('woff2'),
+       url('/fonts/kalam-v10-latin-700.woff') format('woff');
 }
 
 /* home page ------------------------------- */
@@ -42,14 +43,6 @@ html, body {
 .photobgnd {
     background: url("/images/background.jpg") no-repeat center center fixed;
     background-size: cover;
-}
-
-.install {
-    text-align: center;
-    font-size: 150%;
-    font-family: sans-serif;
-    color: white;
-    display: none; /* initially hidden */
 }
 
 .header {
@@ -269,7 +262,6 @@ img.small {
 
 .name {
     font-size: 3.6vmin;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     margin-top: 10px;
     max-width: 200px;
