--- a/nature.css
+++ b/nature.css
@@ -196,6 +196,7 @@ h1 {
     display: flex;
     flex-flow: row wrap;
     margin: 2vw;
+    margin-top: .5vw;
 }
 
 .item {
@@ -278,6 +279,23 @@ img.small {
     .name {
         font-size: 18px;
     }
+}
+
+.hidden {
+    display: none;
+}
+.term {
+    color: #666;
+    cursor: pointer;
+    border: 1px solid white;
+    border-radius: .5em;
+    padding: .2em;
+    margin: .1em;
+    line-height: 200%;
+}
+.hidden:checked + .term  {
+    color: black;
+    background-color: white;
 }
 
 /* Single item page ---------------------------------------------- */
