--- a/nature.css
+++ b/nature.css
@@ -367,7 +367,7 @@ img.large {
     margin-top: .5em;
 }
 
-#hard, #easy, #desert, #forest, #grassland, #mountain, #ocean, #urban, #wetland {
+.extra {
     height: 60px;
     margin-bottom: 15px;
     margin-left: 15px;
