switch image to img

--- a/_includes/single.html
+++ b/_includes/single.html
@@ -51,7 +51,7 @@ prev: function() {
         <h1>
             <div class="header-left">
                 <a href="/{{ section }}/">
-                    <image id="small-logo" src="/images/{{ section }}.svg" />
+                    <img id="small-logo" src="/images/{{ section }}.svg" />
                 </a>
                 <span>{{ name }}</span>
             </div>
@@ -76,7 +76,7 @@ prev: function() {
             {{> map.svg }}
             {{#hard}}
             <div class="popup_outer" onclick="toggle('hard_def')">
-                <image class="extra" src="/images/hard.svg" />
+                <img class="extra" src="/images/hard.svg" />
                 <div class="popup" id="hard_def">
                     <span>
                         <b>Hard</b> - can be difficult to spot. 
@@ -87,7 +87,7 @@ prev: function() {
             {{/hard}}
             {{#easy}}
             <div class="popup_outer" onclick="toggle('easy_def')">
-                <image class="extra" src="/images/easy.svg" />
+                <img class="extra" src="/images/easy.svg" />
                 <div class="popup" id="easy_def">
                     <span>
                         <b>Easy</b> - numerous and usually easy to spot
@@ -99,7 +99,7 @@ prev: function() {
 
             {{#desert}}
             <div class="popup_outer" onclick="toggle('desert_def')">
-                <image class="extra" src="/images/desert.svg" />
+                <img class="extra" src="/images/desert.svg" title="desert" />
                 <div class="popup" id="desert_def">
                     <span><b>Deserts</b> are dry areas covered with sand or
                         rocks and with very few plants. There is 
@@ -109,7 +109,7 @@ prev: function() {
             {{/desert}}
             {{#forest}}
             <div class="popup_outer" onclick="toggle('forest_def')">
-                <image class="extra" src="/images/forest.svg" />
+                <img class="extra" src="/images/forest.svg" title="forest" />
                 <div class="popup" id="forest_def">
                     <span>
                         <b>Forests</b> are large areas of trees growing close
@@ -119,7 +119,7 @@ prev: function() {
             {{/forest}}
             {{#grassland}}
             <div class="popup_outer" onclick="toggle('grassland_def')">
-                <image class="extra" src="/images/grassland.svg" />
+                <img class="extra" src="/images/grassland.svg" title="grassland" />
                 <div class="popup" id="grassland_def">
                     <span><b>Grasslands</b> are large open areas covered with
                         grasses. They have very few trees or shrubs. 
@@ -129,7 +129,7 @@ prev: function() {
             {{/grassland}}
             {{#mountain}}
             <div class="popup_outer" onclick="toggle('mountain_def')">
-                <image class="extra" src="/images/mountain.svg" />
+                <img class="extra" src="/images/mountain.svg" title="mountain" />
                 <div class="popup" id="mountain_def">
                     <span>
                         <b>Mountains</b> are very high areas of land with
@@ -140,7 +140,7 @@ prev: function() {
             {{/mountain}}
             {{#ocean}}
             <div class="popup_outer" onclick="toggle('ocean_def')">
-                <image class="extra" src="/images/ocean.svg" />
+                <img class="extra" src="/images/ocean.svg" title="ocean" />
                 <div class="popup" id="ocean_def">
                     <span>
                         <b>Oceans</b> are large bodies of salt water. This
@@ -151,7 +151,7 @@ prev: function() {
             {{/ocean}}
             {{#urban}}
             <div class="popup_outer" onclick="toggle('urban_def')">
-                <image class="extra" src="/images/urban.svg" />
+                <img class="extra" src="/images/urban.svg" title="urban" />
                 <div class="popup" id="urban_def">
                     <span>
                         <b>Urban</b> areas have a large population within a
@@ -162,7 +162,7 @@ prev: function() {
             {{/urban}}
             {{#wetland}}
             <div class="popup_outer" onclick="toggle('wetland_def')">
-                <image class="extra" src="/images/wetland.svg" />
+                <img class="extra" src="/images/wetland.svg" title="wetland" />
                 <div class="popup" id="wetland_def">
                     <span>
                         <b>Wetlands</b> are low-lying areas that are covered by
