--- a/_includes/searchbutton.html.mustache
+++ b/_includes/searchbutton.html.mustache
@@ -1,3 +1,3 @@
 <a href="/search/" title="open the search page">
-    <image id="search" src="/images/search.svg" />
+    <img id="search" src="/images/search.svg" />
 </a>
