link svg instead of including

--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -186,16 +186,26 @@
 "/images/background.jpg",
 "/images/birds.svg",
 "/images/close.svg",
+"/images/desert.svg",
+"/images/easy.svg",
+"/images/forest.svg",
+"/images/grassland.svg",
+"/images/hard.svg",
 "/images/help.svg",
 "/images/herps.svg",
 "/images/insects.svg",
 "/images/location.svg",
+"/images/map.svg",
 "/images/menu.svg",
+"/images/mountain.svg",
 "/images/naturecompanion.svg",
+"/images/ocean.svg",
 "/images/plants.svg",
 "/images/search.svg",
 "/images/title.svg",
 "/images/trees.svg",
+"/images/urban.svg",
+"/images/wetland.svg",
 "/insects/",
 "/insects/ants/",
 "/insects/azurebut/",
